css/main.css
/*
 * Author: Carlos Alvarez
 * URL: http://alvarez.is
 *
 * Project Name: Bolt - Free Bootstrap 3 Theme
 * Version: 1.0
 * URL: http://blacktie.co
 */
 
/* FONTS */
@import url(https://fonts.googleapis.com/css?family=Lato:300,400,700,900);
@import url(https://fonts.googleapis.com/css?family=Raleway:400,300,700,900);

/* OVERALL ASPECT */

body {
	min-width:360px;
  background-color: #fafafa;
    font-family: "Lato";
    font-weight: 300;
    font-size: 16px;
    color: #555;

    -webkit-font-smoothing: antialiased;
    -webkit-overflow-scrolling: touch;
}

/* Titles */
h1, h2, h3, h4, h5, h6 {
    font-family: "Raleway";
    font-weight: 300;
    color: #333;
}


/* Paragraph & Typographic */
p {
    line-height: 28px;
    margin-bottom: 25px;
}

.centered {
    text-align: center;
}

.mt {
	margin-top: 40px;
}

/* Links */
a {
    color: #1976ee;
    word-wrap: break-word;

    -webkit-transition: color 0.1s ease-in, background 0.1s ease-in;
    -moz-transition: color 0.1s ease-in, background 0.1s ease-in;
    -ms-transition: color 0.1s ease-in, background 0.1s ease-in;
    -o-transition: color 0.1s ease-in, background 0.1s ease-in;
    transition: color 0.1s ease-in, background 0.1s ease-in;
}

a:hover,
a:focus {
    color: #7b7b7b;
    text-decoration: none;
    outline: 0;
}

a:before,
a:after {
    -webkit-transition: color 0.1s ease-in, background 0.1s ease-in;
    -moz-transition: color 0.1s ease-in, background 0.1s ease-in;
    -ms-transition: color 0.1s ease-in, background 0.1s ease-in;
    -o-transition: color 0.1s ease-in, background 0.1s ease-in;
    transition: color 0.1s ease-in, background 0.1s ease-in;
}

/* Bootstrap Modifications */
 hr {
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid #ccc;
    margin: 1em 0;
    padding: 0;
}


.navbar {
	font-weight: 800;
	font-size: 14px;
	padding-top: 15px;
	padding-bottom: 15px;
	background-color: #ffffff;
}

.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
	color: #ffffff;
	background-color: #74cfae;
}

.navbar-brand {
	font-size: 60px;
	padding-top: 0px;
	padding-bottom: 0px;
}

.btn-theme {
	color: #ffffff;
	background-color: #74cfae;
	border-color: transparent;
}

.btn {
	padding: 10px 30px;
	margin-bottom: 0;
	font-size: 18px;
	border: 5px solid transparent;
	border-radius: 0px;
}

.lead {
	letter-spacing: 1px;
}

/* WRAP SECTIONS */

/* hello */
#hello {
	width: 100%;
	padding-top: 150px;
	padding-bottom: 150px;
	background-image: url(/img/top.jpg);
	-moz-background-size:cover;
	background-size:cover;
	display: inline-block;
}

#hello h1 {
	font-size: 64px;
	font-weight: 700;
	letter-spacing: 3px;
	color: #74cfae;
	background-color: rgba(0,0,0,0.6);
}

#hello h2 {
	color: #c0c0c0;
	font-weight: 400;
}

/* Green */
#green {
	background-color: #74cfae;
	padding-top: 50px;
	margin-bottom: 0px;
}

#green h3 {
	color: white;
	font-weight: 400;
	margin-bottom: 35px;
}

#green p {
	color: white;
	font-weight: 400;
	font-size: 20px;
}

/* Skills */
#skills {
	background-color: #4e4e4e;
	padding-top: 50px;
	padding-bottom: 50px;
	margin-top: 10px;
}

#skills h2 {
	color: white;
}
#skills h3 {
	color: white;
}

#skills ul li {
	font-size: 24px;
	color: white;
}

#skills p {
	color: white;
	font-weight: 400;
}

#education{

}
#education ul li {
	font-size: 24px;
	text-align: left;
}
#education ul li ul li{
	font-size: 18px;
	text-align: left;
}

#products{
	background-color: #4e4e4e;
	color: #fff;
}
#products h2{
	color: #fff;
}
#products p{
	text-align: left;
	font-size: 20px;
}
#products a{
	font-weight: bold;
}
.title{
	text-align: center;
	font-size: 22px;
}

/* Social Links */
#social {
	width: 100%;
	padding-top: 100px;
	padding-bottom: 100px;
	font-size: 32px;
	color: #74cfae;
}

#social i {
	font-size: 50px;
	color: #74cfae;
}

#social .col-md-3:hover {
	background-color: #f5f5f5;
}

#social .col-md-3 {
	padding:30px;
}

/* Footer */
#f {
	padding-top: 20px;
	background-color: #74cfae;
}

#f p {
	color: white;
	text-align: right;
	font-weight: 400;
}

/* Image Opacity */
.grid img {
    opacity: .7;
}
.grid img:hover {
    opacity: 1;
}

